@@ -1,1 +1,0 @@
-/home/laz/Projects/HTML-StateTable/master/share/js/hstatetable-columntrait.js
