@@ -5,6 +5,7 @@ use warnings;
 use parent 'DBIx::Class::Core';
 
 use HTML::Forms::Constants qw( FALSE TRUE );
+use JSON::MaybeXS          qw( decode_json encode_json );
 
 __PACKAGE__->table('preference');
 
@@ -19,6 +20,11 @@ __PACKAGE__->add_columns(
 __PACKAGE__->set_primary_key('id');
 
 __PACKAGE__->add_unique_constraint('preference_name', ['name']);
+
+__PACKAGE__->inflate_column('value', {
+   deflate => sub { encode_json(shift) },
+   inflate => sub { decode_json(shift) },
+});
 
 1;
 
