@@ -6,12 +6,17 @@ use HTML::StateTable::Moo;
 
 extends 'HTML::StateTable';
 with    'HTML::StateTable::Role::Searchable';
-with    'HTML::StateTable::Role::Downloadable';
 with    'HTML::StateTable::Role::Configurable';
+with    'HTML::StateTable::Role::Active';
+with    'HTML::StateTable::Role::Downloadable';
 with    'HTML::StateTable::Role::Filterable';
 with    'HTML::StateTable::Role::CheckAll';
 with    'HTML::StateTable::Role::Form';
+with    'HTML::StateTable::Role::HighlightRow';
 
+has '+active_control_location' => default => 'TopRight';
+
+# TODO: Implement the selection attribute to form buttons
 has '+form_buttons' => default => sub {
    return [
       { action    => 'artist/remove',
@@ -46,6 +51,12 @@ has_column 'name' =>
    searchable => TRUE,
    sortable => TRUE,
    title => 'Sort by artist';
+
+sub highlight_row {
+   my ($self, $row) = @_;
+
+   return $row->result->name eq 'Ozzy' ? TRUE : FALSE;
+}
 
 use namespace::autoclean -except => TABLE_META;
 
